# disk-eater

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
src/: lib.rs
src/core/: disk_eater.rs  disk_listener.rs  get_disk_info.rs  mod.rs
src/core/utils/: disk.rs  mod.rs  os_string.rs  path.rs
ui/: 404.html  eater.css  eater.html  index.css  index.html  style.css
ui/js/: disk.js  rive.js
ui/rive/: loader.riv
