[package]
name = "disk-eater"
version = "1.0.0"
authors = ["FssAy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.9" }

[dependencies]
serde_json = "1.0"
sysinfo = "0.29.10"
random-string = "1.0.1"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.15" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
